新增了gif文件上传支持功能

--- a/frontend_demo/api_test.html
+++ b/frontend_demo/api_test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>后端API测试页面</title>
     <style>
         .container { max-width: 800px; margin: 0 auto; padding: 20px; }
