新增了gif文件上传支持功能

--- a/frontend_demo/api_test.html
+++ b/frontend_demo/api_test.html
@@ -16,7 +16,7 @@
         <h1>🩺 视网膜分割API测试</h1>
 
         <div class="upload-area">
-            <input type="file" id="imageInput" accept=".png,.jpg,.jpeg,.tiff">
+            <input type="file" id="imageInput" accept=".png,.jpg,.jpeg,.tiff,.gif">
             <button onclick="uploadImage()">上传并测试</button>
         </div>
 
